shared_library("uisdk") {
    cflags = []
    ldflags = []
    libs = []

    if (is_debug && (is_mac || is_linux)) {
      cflags += ["-g", "-O0"]
    }

    defines = ["UI_EXPORTS"]
    deps = [
      "//ui/gpu:uigpu"
    ]

    include_dirs = [
        "//",
        "//ui/",
        "//ui/sdk/",
        "//ui/3rd/skia/src/",
        "//ui/3rd/skia/src/include/core/"
    ]

    # Python deps
    # defines += ["HAVE_WCHAR_H"]
    if (is_mac) {
      cflags += [
        "-isystem",
        "/usr/local/opt/python@3.9/Frameworks/Python.framework/Versions/3.9/include/python3.9"
      ]
      ldflags += [
        "-L/usr/local/opt/python@3.9/Frameworks/Python.framework/Versions/3.9/lib"
      ]
      libs += [
        "python3.9"
      ]
    }
  
    lib_dirs = ["$root_build_dir/"]
    # skia
    # 将依赖库拷贝到out/debug目录下
    copy("skia") {
      if (is_mac) { 
        if (is_debug) {
          sources = ["//ui/3rd/skia/src/out/debug/libskia.dylib"]
        } else {
          sources = ["//ui/3rd/skia/src/out/dylib/libskia.dylib"]
        }
      } else if (is_win) {
        sources = [
          "//ui/3rd/skia/src/out/Shared/skia.dll",
          "//ui/3rd/skia/src/out/Shared/skia.dll.lib"
        ]
      }
      outputs = ["$root_build_dir/{{source_file_part}}"]
    }
    if (is_win) {
      libs += [
        "atls.lib",  # ATL
        "skia.dll.lib",
      ]
      ldflags += [
        
       ]
    }
    else if (is_mac || is_linux) {
       # 直接在当前目录查找libskia.dylib
      ldflags += [
        "-rpath", ".",
      ]
      libs += ["skia"]
    }
    
   
    sources = [
        # "//ui/3rd/zip/unzip.cpp",
        # "//ui/3rd/zip/zip.cpp",
        # "//ui/3rd/zip/ziputil.cpp",
        "//ui/3rd/pugixml/pugixml.cpp",

        "include/common/math/math.cpp",
        "include/common/math/matrix.cpp",
        "include/common/math/quad.cpp",
        "src/animate/animate.cpp",
        "src/animate/ease/easing.cpp",
        "src/animate/ianimate.cpp",
        "src/animate/storyboard.cpp",
        "src/animate/timeline.cpp",
        "src/application/uiapplication.cpp",
        "src/application/iuiapplication.cpp",
        "src/attribute/9region_attribute.cpp",
        "src/attribute/attribute.cpp",
        "src/attribute/attributebase.cpp",
        "src/attribute/attribute_alias.cpp",
        "src/attribute/iattribute.cpp",
        "src/attribute/bool_attribute.cpp",
        "src/attribute/color_attribute.cpp",
        "src/attribute/enum_attribute.cpp",
        "src/attribute/flags_attribute.cpp",
        "src/attribute/int_attribute.cpp",
        "src/attribute/length_attribute.cpp",
        "src/attribute/rect_attribute.cpp",
        "src/attribute/renderbase_attribute.cpp",
        "src/attribute/stringselect_attribute.cpp",
        "src/attribute/size_attribute.cpp",
        "src/attribute/string_attribute.cpp",
        "src/attribute/textrenderbase_attribute.cpp",
        "src/control/control.cpp",
        "src/control/icontrol.cpp",
        "src/graphics/bitmap/skiabitmap.cpp",
        "src/graphics/renderlibrary.cpp",
        "src/graphics/skia/skia_render.cpp",
        "src/graphics/skia/skia_bitmap.cpp",
        "src/helper/iuiinterface.cpp",
        "src/helper/topwindow/topwindowmanager.cpp",
        "src/helper/version/versionhelper.cpp",
        "src/helper/scale/scale_factor.cpp",
        "src/layer/compositor.cpp",
        "src/layer/layer.cpp",
        "src/layer/ilayer.cpp",
        "src/layer/transform3d.cpp",
        "src/layer/windowrender.cpp",
        "src/layer/hardware_compositor.cpp",
        "src/layer/software_compositor.cpp",
        "src/layer/hardware_layer.cpp",
        "src/layer/software_layer.cpp",
        "src/layout/averagelayout.cpp",
        "src/layout/canvaslayout.cpp",
        "src/layout/cardlayout.cpp",
        "src/layout/desktop_layout.cpp",
        "src/layout/gridlayout.cpp",
        "src/layout/horzlayout.cpp",
        "src/layout/vertlayout.cpp",
        "src/layout/layout.cpp",
        "src/layout/layout_factory.cpp",
        "src/message_loop/message_loop.cpp",
        "src/object/message.cpp",
        "src/object/imessage.cpp",
        "src/object/iobject.cpp",
        "src/object/object.cpp",
        "src/object/objtree.cpp",
        "src/object/object_attrib.cpp",
        "src/object/object_layer.cpp",
        "src/object/object_rect.cpp",
        "src/object/object_render.cpp",
        "src/object/object_animate.cpp",
        "src/panel/ipanel.cpp",
        "src/panel/panel.cpp",
        "src/panel/round_panel.cpp",
        "src/python/py_module.cpp",
        "src/render/colorrender/colorrender.cpp",
        "src/render/colorrender/icolorrender.cpp",
        "src/render/imagerender/iimagerender.cpp",
        "src/render/imagerender/imagerender.cpp",
        "src/render/irenderbase.cpp",
        "src/render/renderbase.cpp",
        "src/render/renderbase_factory.cpp",
        "src/render/textrender/itextrenderbase.cpp",
        "src/render/textrender/textrender.cpp",
        "src/render/textrender/textrender_factory.cpp",
        "src/resource/colormanager.cpp",
        "src/resource/colorres.cpp",
        "src/resource/fontmanager.cpp",
        "src/resource/fontres.cpp",
        # "src/resource/gifres.cpp",
        "src/resource/i18nres.cpp",
        "src/resource/imagemanager.cpp",
        "src/resource/imageres.cpp",
        "src/resource/resource_manager.cpp",
        "src/resource/iuires.cpp",
        "src/resource/i18nmanager.cpp",
        "src/resource/layoutmanager.cpp",
        "src/resource/res_bundle.cpp",
        "src/resource/stylemanager.cpp",
        "src/resource/styleres.cpp",
        "src/skin_parse/datasource/File/filedatasource.cpp",
        "src/skin_parse/datasource/File/filebufferreader.cpp",
        "src/skin_parse/datasource/skindatasource.cpp",
        "src/skin_parse/mapattr/mapattr.cpp",
        "src/skin_parse/skinparseengine.cpp",
        "src/skin_parse/xml/ixmlwrap.cpp",
        "src/skin_parse/xml/pugixmlwrap/pugixmlwrap.cpp",
        "src/skin_parse/xml/xmlwrap.cpp",
        "src/util/color.cpp",
        "src/util/log/log.cpp",
        "src/util/DPI/dpihelper.cpp",
        "src/util/struct.cpp",
        "src/util/util.cpp",
        "src/util/uiapi.cpp",
        "src/util/rectregion/rectregion.cpp",
        "src/util/path.cpp",
        "src/window/iwindow.cpp",
        "src/window/window.cpp",
        "src/window/window_mouse_key.cpp",
    ]

    if (is_linux) {
      cflags += exec_script("//build/pkg-config.py", ["--cflags", "glib-2.0"], "value")
    }

    if (is_win) {
      sources += [
        "src/message_loop/message_loop_win.cpp",
        "src/message_loop/win/msghelper.cpp",
        "src/window/window_win.h",
        "src/window/window_win.cpp",
      ]
      #libs += [
      #  "skia.dll",
      #]
    }
    if (is_linux) {
        sources += [
            "src/window/window_linux.cpp",
            "src/window/linux/display.cpp",
            "src/message_loop/message_loop_linux.cpp",
        ]
        libs += [
            "glib-2.0",
            "x11"
        ]
    }
    if (is_mac) {
        sources += [
            "src/window/window_mac.mm",
            "src/message_loop/message_loop_mac.mm",
        ]
    }

    if (is_mac) {
        sources += [
            "src/application//application_mac.mm",
        ]
        # skia Mac 依赖
        ldflags += [
            "-framework", "CoreFoundation",
            "-framework", "CoreGraphics",
            "-framework", "CoreText",
            "-framework", "CoreServices",
            "-framework", "Cocoa",
            "-framework", "QuartzCore",  # Core Animation
        ]
    }


    # 单元测试
    if (is_debug) {
      defines += ["UI_UNITTEST"]
      sources += [
        "test/test_entry.cpp",
        "include/common/signalslot/signalslot_unittest.cpp",
        "include/common/ptr/weakptr_unittest.cpp",
        "src/message_loop/message_loop_unittest.cpp",
        "src/util/rectregion/rectregion_unittest.cpp",
        "include/common/uuid/uuid_unittest.cpp",
        "src/util/color_test.cpp",
      ]
    }
}



group("sdk") {
  deps = [
    ":uisdk"
  ]
}


#######################################

if (is_debug) {
executable("uisdk_unittest") {
  deps = [
    "//ui/sdk:uisdk"
  ]

  cflags = []
  if (is_debug || (is_mac||is_linux)) {
    cflags = ["-g"]
  }
  include_dirs = [
    "//ui/",
    "//ui/sdk/",
  ]
  sources = [
    "test/test_main.cpp"
  ]
}
group("sdk_test") {
  deps = [
    ":uisdk_unittest"
  ]
}

}