shared_library("uisvg") {
    cflags = [
      "-Wno-deprecated",
      "-Wno-deprecated-declarations"
    ]

    defines = ["UI_SVG_EXPORTS"]
    include_dirs = [
        "//",
        "//ui/",
        "//ui/svg/",
        "//ui/3rd/skia/src/",
        "//ui/3rd/skia/src/include/core/",
        # "//ui/3rd/skia/src/modules/svg/include/"
    ]
  
    lib_dirs = ["$root_build_dir/bin"]
    
    deps = [
      "//ui/sdk:uisdk"
    ]

    # 直接在当前目录查找libuisdk
    if (is_win) {
      libs = []
      ldflags = [
        "skia.dll.lib",
        "-libpath:$root_build_dir/",
       ]
    }
    else if (is_mac || is_linux) {
      libs = ["skia"]
      ldflags = [
        "-rpath", ".",
      ]
    }

    sources = [
      "//ui/3rd/pugixml/pugixml.cpp",

      "src/element/ielement.cpp",
      "src/element/element.cpp",
      "src/element/rect/rect.cpp",
      "src/element/render_context.cpp",
      "src/element/circle/circle.cpp",
      "src/element/ellipse/ellipse.cpp",
      "src/element/group/group.cpp",
      "src/element/line/line.cpp",
      "src/element/path/path.cpp",
      "src/element/text/text.cpp",
      "src/element/shape/shape.cpp",
      "src/element/svg/svg.cpp",
      "src/element/use/use.cpp",
      "src/element/dom.cpp",
      "src/element/polyline/polyline.cpp",
      
      "src/ui/isvg.cpp",
      "src/ui/svg_control.cpp",
      "src/ui/svg_layout.cpp",
      "src/uisvgapi.cpp",
    ]

    # 单元测试
    if (is_debug) {
      defines += ["UI_UNITTEST"]
      sources += [
      ]
    }
}

 
group("svg") {
  deps = [
    ":uisvg"
  ]
}
