

executable("hello") {
    deps = [
        "//ui/sdk:sdk"
    ]
    include_dirs = [
        "//",
        "//ui",
        "//ui/3rd/skia/",
        "//ui/3rd/skia/include/core/",
        "//ui/sdk",
    ]
    sources = [
        "main.cc",
        "macos.mm"
    ]

    # lib_dirs = ["../../3rd/skia/lib"]
    # libs = ["skia"]

    # skia Mac 依赖
    # ldflags = [
    #     "-framework", "CoreFoundation",
    #     "-framework", "CoreGraphics",
    #     "-framework", "CoreText",
    #     "-framework", "CoreServices",
    #     "-framework", "Cocoa",
    # ]

    cflags = []
    if (is_debug) {
      cflags += ["-g"]
    }

    print("cflags=", cflags)
}